// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicTextInput > should render the input correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-dsLQwm cymheT"
  >
    <div
      class="sc-iKTcqh ewOKgd"
    >
      <label
        class="sc-gJhJTp djgZQL"
        for="test-input-id"
      >
        <span
          class="sc-elDIKY QGqgT"
        >
          Test Input:
        </span>
      </label>
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        class="sc-gnpbhQ gfDOsA"
        id="test-input-id"
        name="test"
        placeholder="Enter text here..."
        type="text"
        value=""
      />
    </div>
    <span
      class="sc-braxZu kmOXHf"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;

exports[`ChopLogicTextInput > should render the required input correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-dsLQwm cymheT"
  >
    <div
      class="sc-iKTcqh ewOKgd"
    >
      <label
        class="sc-gJhJTp djgZQL"
        for="test-input-id"
      >
        <span
          class="sc-elDIKY QGqgT"
        >
          Test Input:
        </span>
        <abbr
          class="sc-fQpRED uWPVK"
          title="required"
        >
          *
        </abbr>
      </label>
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        class="sc-gnpbhQ gfDOsA"
        id="test-input-id"
        name="test"
        placeholder="Enter text here..."
        required=""
        type="text"
        value=""
      />
    </div>
    <span
      class="sc-braxZu kmOXHf"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;
